--- a/ingress/ingress.yaml
+++ b/ingress/ingress.yaml
@@ -1,39 +1,51 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: group3-main-ingress
+  name: apps-ingress
   namespace: apps
   annotations:
     kubernetes.io/ingress.class: alb
+
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
-    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
-    alb.ingress.kubernetes.io/group.name: group3
+    alb.ingress.kubernetes.io/load-balancer-name: group3-dev-alb
+
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443},{"HTTP":80}]'
+    alb.ingress.kubernetes.io/ssl-redirect: "443"
+
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:570430250751:certificate/e3d665c9-81cb-45fa-a99e-c1348e3810d7
+
+    alb.ingress.kubernetes.io/healthcheck-path: /health
+    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
+    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
+    alb.ingress.kubernetes.io/success-codes: "200"
+
 spec:
+  ingressClassName: alb
   rules:
-  - http:
-      paths:
-      - path: /a
-        pathType: Prefix
-        backend:
-          service:
-            name: service-a
-            port:
-              number: 80
+    - host: api.dev.theareak.click
+      http:
+        paths:
+          - path: /a
+            pathType: Prefix
+            backend:
+              service:
+                name: service-a
+                port:
+                  number: 80
 
-      - path: /b
-        pathType: Prefix
-        backend:
-          service:
-            name: service-b
-            port:
-              number: 80
+          - path: /b
+            pathType: Prefix
+            backend:
+              service:
+                name: service-b
+                port:
+                  number: 80
 
-      - path: /c
-        pathType: Prefix
-        backend:
-          service:
-            name: service-c
-            port:
-              number: 80
-
+          - path: /c
+            pathType: Prefix
+            backend:
+              service:
+                name: service-c
+                port:
+                  number: 80
