--- a/ingress/ingress.yaml
+++ b/ingress/ingress.yaml
@@ -4,46 +4,46 @@ metadata:
   name: apps-ingress
   namespace: apps
   annotations:
-  kubernetes.io/ingress.class: alb
-  alb.ingress.kubernetes.io/target-type: ip
-  alb.ingress.kubernetes.io/load-balancer-name: group3-dev-alb
+    kubernetes.io/ingress.class: alb
+    alb.ingress.kubernetes.io/target-type: ip
+    alb.ingress.kubernetes.io/load-balancer-name: group3-dev-alb
 
-  # HTTPS listener
-  alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443},{"HTTP":80}]'
-  alb.ingress.kubernetes.io/ssl-redirect: "443"
-  alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:570430250751:certificate/44d724cd-3faf-4413-bbe0-dfe2f248b363
+    # HTTPS listener + HTTPS redirect
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443},{"HTTP":80}]'
+    alb.ingress.kubernetes.io/ssl-redirect: "443"
 
-  # HEALTHCHECK FIX
-  alb.ingress.kubernetes.io/healthcheck-path: /a/health
-  alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
-  alb.ingress.kubernetes.io/healthcheck-port: traffic-port
-  alb.ingress.kubernetes.io/success-codes: "200"
+    # ACM certificate
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:570430250751:certificate/44d724cd-3faf-4413-bbe0-dfe2f248b363
 
-
+    # HEALTHCHECK FIX
+    alb.ingress.kubernetes.io/healthcheck-path: /a/health
+    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
+    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
+    alb.ingress.kubernetes.io/success-codes: "200"
 spec:
   ingressClassName: alb
   rules:
-    - host: api.dev.theareak.click
-      http:
-        paths:
-          - path: /a
-            pathType: Prefix
-            backend:
-              service:
-                name: service-a
-                port:
-                  number: 80
-          - path: /b
-            pathType: Prefix
-            backend:
-              service:
-                name: service-b
-                port:
-                  number: 80
-          - path: /c
-            pathType: Prefix
-            backend:
-              service:
-                name: service-c
-                port:
-                  number: 80
+  - host: api.dev.theareak.click
+    http:
+      paths:
+      - path: /a
+        pathType: Prefix
+        backend:
+          service:
+            name: service-a
+            port:
+              number: 80
+      - path: /b
+        pathType: Prefix
+        backend:
+          service:
+            name: service-b
+            port:
+              number: 80
+      - path: /c
+        pathType: Prefix
+        backend:
+          service:
+            name: service-c
+            port:
+              number: 80
