--- a/apps/service-a-deploy.yaml
+++ b/apps/service-a-deploy.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: service-a
-        image: 570430250751.dkr.ecr.ap-southeast-1.amazonaws.com/service-a:latest
+        image: 570430250751.dkr.ecr.ap-southeast-1.amazonaws.com/service-a:dev-v1.0.25
         ports:
           - containerPort: 8080
         env:
