--- a/apps/service-c-deploy.yaml
+++ b/apps/service-c-deploy.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: service-c
-        image: 570430250751.dkr.ecr.ap-southeast-1.amazonaws.com/service-c:latest
+        image: 570430250751.dkr.ecr.ap-southeast-1.amazonaws.com/service-a:dev-v1.0.13
         ports:
           - containerPort: 8080
         env:
