--- a/apps/service-b-deploy.yaml
+++ b/apps/service-b-deploy.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: service-b
-        image: 570430250751.dkr.ecr.ap-southeast-1.amazonaws.com/service-a:dev-v1.0.15
+        image: 570430250751.dkr.ecr.ap-southeast-1.amazonaws.com/service-b:dev-v1.0.15
         ports:
           - containerPort: 8080
         env:
